// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsScreen – Snapshot tests renders Notifications modal (default OFF) 1`] = `
[
  <View
    entering={BaseAnimationMock {}}
    style={
      {
        "alignItems": "center",
        "paddingBottom": 40,
        "paddingHorizontal": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#666",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "marginBottom": 8,
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ],
        ]
      }
    >
      Settings
    </Text>
    <Text
      style={
        [
          {
            "color": "#666",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          [
            {
              "fontSize": 16,
              "lineHeight": 22,
              "textAlign": "center",
            },
            {
              "color": "#666666",
            },
          ],
        ]
      }
    >
      Customize your app experience
    </Text>
  </View>,
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 20,
      }
    }
  >
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Notifications
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Theme
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          About
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Accessibility
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Reset Progress
        </Text>
      </View>
    </View>
  </View>,
  <Modal
    animationType="slide"
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      style={
        {
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
          "padding": 20,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 20,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 24,
                  "fontWeight": "bold",
                  "marginBottom": 20,
                },
                {
                  "color": "#000000",
                  "textAlign": "center",
                },
              ],
            ]
          }
        >
          Notifications
        </Text>
        <View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginVertical": 20,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#666",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  {
                    "color": "#000000",
                  },
                ]
              }
            >
              Enable Notifications
            </Text>
            <RCTSwitch
              accessibilityRole="switch"
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "flex-start",
                }
              }
              thumbTintColor="#888"
              value={false}
            />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-end",
              "marginTop": 30,
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#666",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#1e90ff",
                  "fontSize": 16,
                },
              ]
            }
          >
            Close
          </Text>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`SettingsScreen – Snapshot tests renders Theme selection modal 1`] = `
[
  <View
    entering={BaseAnimationMock {}}
    style={
      {
        "alignItems": "center",
        "paddingBottom": 40,
        "paddingHorizontal": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#666",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "marginBottom": 8,
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ],
        ]
      }
    >
      Settings
    </Text>
    <Text
      style={
        [
          {
            "color": "#666",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          [
            {
              "fontSize": 16,
              "lineHeight": 22,
              "textAlign": "center",
            },
            {
              "color": "#666666",
            },
          ],
        ]
      }
    >
      Customize your app experience
    </Text>
  </View>,
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 20,
      }
    }
  >
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Notifications
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Theme
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          About
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Accessibility
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Reset Progress
        </Text>
      </View>
    </View>
  </View>,
  <Modal
    animationType="slide"
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      style={
        {
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
          "padding": 20,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "padding": 20,
            },
            {
              "backgroundColor": "#fff",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 24,
                  "fontWeight": "bold",
                  "marginBottom": 20,
                },
                {
                  "color": "#000000",
                  "textAlign": "center",
                },
              ],
            ]
          }
        >
          Choose Theme
        </Text>
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 14,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#666",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  {
                    "color": "#000000",
                  },
                ]
              }
            >
              🌞 Light Mode
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 14,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#666",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  {
                    "color": "#000000",
                  },
                ]
              }
            >
              🌙 Dark Mode
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "paddingHorizontal": 10,
                "paddingVertical": 14,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#666",
                  },
                  {
                    "fontSize": 16,
                    "lineHeight": 24,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  {
                    "color": "#000000",
                  },
                ]
              }
            >
              🖥 System Default
            </Text>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-end",
              "marginTop": 30,
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#666",
                },
                {
                  "fontSize": 16,
                  "lineHeight": 24,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                {
                  "color": "#1e90ff",
                  "fontSize": 16,
                },
              ]
            }
          >
            Close
          </Text>
        </View>
      </View>
    </View>
  </Modal>,
]
`;

exports[`SettingsScreen – Snapshot tests renders default Settings screen 1`] = `
[
  <View
    entering={BaseAnimationMock {}}
    style={
      {
        "alignItems": "center",
        "paddingBottom": 40,
        "paddingHorizontal": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#666",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          [
            {
              "fontSize": 32,
              "fontWeight": "bold",
              "marginBottom": 8,
              "textAlign": "center",
            },
            {
              "color": "#000000",
            },
          ],
        ]
      }
    >
      Settings
    </Text>
    <Text
      style={
        [
          {
            "color": "#666",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          [
            {
              "fontSize": 16,
              "lineHeight": 22,
              "textAlign": "center",
            },
            {
              "color": "#666666",
            },
          ],
        ]
      }
    >
      Customize your app experience
    </Text>
  </View>,
  <View
    style={
      {
        "flex": 1,
        "paddingHorizontal": 20,
      }
    }
  >
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Notifications
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Theme
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          About
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Accessibility
        </Text>
      </View>
    </View>
    <View
      entering={BaseAnimationMock {}}
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "flexDirection": "row",
              "marginBottom": 16,
              "padding": 12,
              "width": "100%",
            },
            {
              "backgroundColor": "#F5F5F5",
              "borderColor": "#E5E5E5",
              "borderWidth": 1,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 10,
                "marginRight": 16,
                "padding": 8,
              },
              {
                "backgroundColor": "rgba(49,130,206,0.15)",
              },
            ]
          }
        />
        <Text
          style={
            [
              {
                "color": "#666",
              },
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              [
                {
                  "fontSize": 18,
                  "fontWeight": "500",
                },
                {
                  "color": "#000000",
                },
              ],
            ]
          }
        >
          Reset Progress
        </Text>
      </View>
    </View>
  </View>,
]
`;
